--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,7 +8,7 @@
           %a{:href => "/groups/new"}
             = fa_icon 'pencil-square-o', class: 'icon'
         %li.list
-          = link_to edit_users_path(current_user) do
+          = link_to edit_user_path(current_user) do
             = fa_icon 'cog', class: 'icon'
     .groups
       = render partial: 'group'
