--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,8 +1,9 @@
-.upper-message
-  .upper-message__user-name
-    のむよ
-  .upper-message__date
-    2018/09/25 06:30
-.lower-message
-  %p.lower-message__content
-    疲れたーーーー！楽しいーーーーー！幸せーーーーー！わーーーーー！
+.message
+  .upper-message
+    .upper-message__user-name
+
+    .upper-message__date
+
+  .lower-message
+    %p.lower-message__content
+
