--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,8 @@
 @import "chat-space";
 @import "font-awesome";
 @import "modules/user";
+@import "modules/side_bar";
+@import "modules/chat";
 @import "config/colors";
 @import "modules/flash";
 @import "modules/group";
