--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -11,14 +11,14 @@
             Nomura Masayo
       .right-header
         .right-header__button
-          = link_to 'Edit', edit_group_path(@group.id)
+          = link_to 'Edit', edit_group_path(@group.id), class: 'edit'
     .messages.js-messages
       = render partial: 'message'
     .form
-      .js-form{"id" => "new_message", "enctype" => "multipart/form-data", "accept-charset" => "UTF-8", "method" => "post"}
-        %input.form__message.js-content{"placeholder" => "type a message", "name" => "message[content]", "id" => "message_content" }
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
         .form__mask
-          %label.form__mask__image
+          = f.label :image, class: 'form__mask__image' do
             = fa_icon 'picture-o', class: 'icon'
-            %input.hidden.js-file{:type => "file"}
-      %input.form__submit{:type => "submit", :name => "comit", :value => "Send", "data-disable-with" => "Send"}
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
