--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -44,6 +44,7 @@
   .messages.js-messages {
     padding: 46px 40px 0;
     height: calc(100vh - 237px);
+    overflow: auto;
   }
 
   .message {
@@ -72,8 +73,7 @@
       margin-top: 10px;
     }
     &__image {
-      width: 400px;
-      height: 300px;
+      width: 200px;
       object-fit: cover;
     }
   }
