--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,11 +4,12 @@
     .header
       .left-header
         .left-header__title
-          タイトル
+          = @group.name
         %ul.left-header__members
           Member :
           %li.member
-            Nomura Masayo
+            - @group.group_users.each do |group_user|
+              = group_user.user.name
       .right-header
         .right-header__button
           = link_to 'Edit', edit_group_path(@group.id), class: 'edit'
